# rasa

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  PERSONA.md  PERSONA_DESIGN.md  README.md  RELEASE_NOTES.md  pyproject.toml  requirements.txt  setup.py  version.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  ci.yml.template
apps/: Persona.md  README.md
apps/economist_advisor/: main.py  persona.yaml
apps/economist_advisor/operators/: economy_heuristic_agent.py
apps/strategic_stock_analyst/: main.py  persona.yaml
apps/strategic_stock_analyst/frames/: markettrendsframe.py  riskassessmentframe.py  stockrecommendationframe.py
apps/strategic_stock_analyst/operators/: externaldataoperator.py  portfoliohealthoperator.py  sectorinsightsoperator.py
apps/travel_concierge/: README.md  main.py  persona.yaml  test_cases.json
apps/travel_concierge/operators/: travel_heuristic_agent.py
client/: api_cli.py
clients/: README.md  main.py  rasa.py
docs/: index.html
rasa/: .gitignore  version.py
rasa/api/: llm.py  main.py  status.py
rasa/cli/: README.md  main.py
rasa/config/: .env-llm  settings.py
rasa/core/: agent.py  constants.py  persona.py  runner.py  state.py
rasa/frames/: long_term_frame.py  persona_frame.py  session_frame.py  short_term_frame.py  stateless_frame.py
rasa/graph/: graph_builder.py
rasa/llm/: LLM_CONFIG.md  llm_adapter.py  llm_client.py
rasa/mcp/: capabilities.py  handlers.py  main.py  server.py
rasa/memory/: in_memory.py  redis_memory.py  vector_memory.py
rasa/operators/: critic_agent.py  heuristic_agent.py  llm_operator.py  preference_agent.py  rule_engine_agent.py  tone_formatter.py  tool_executor_agent.py
rasa/prompts/templates/: stateless_prompt.j2
rasa/utils/: id_generator.py  trace.py
tests/: test_api.py  test_api_cli.py  test_api_end_to_end.py  test_api_llm_info.py  test_api_master.py  test_cli.py  test_cli_e2e.py  test_cli_end_to_end.py  test_economist_advisor_flow.py  test_heuristic_agent.py  test_llm_operator.py  test_persona_build.py  test_runner.py  test_settings.py  test_stateless_frame.py  test_strategic_stock_analyst.py  test_travel_concierge_flow.py
