[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rasa-experimental"
version = "0.1.2.dev0"
description = "Persona-driven, memory-integrated AI framework (experimental)"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
  { name = "Vedanta Barooah", email = "barooah.io@gmail.com" }
]
keywords = [
    "AI", "agents", "memory", "persona", "langgraph", "LLM", "framework"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License"
]

dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "appnope==0.1.4",
    "argon2-cffi==23.1.0",
    "argon2-cffi-bindings==21.2.0",
    "arrow==1.3.0",
    "asttokens==3.0.0",
    "async-lru==2.0.5",
    "async-timeout==4.0.3",
    "attrs==25.3.0",
    "babel==2.17.0",
    "beautifulsoup4==4.13.3",
    "black==25.1.0",
    "bleach==6.2.0",
    "certifi==2025.1.31",
    "cffi==1.17.1",
    "charset-normalizer==3.4.1",
    "click==8.1.8",
    "comm==0.2.2",
    "debugpy==1.8.13",
    "decorator==5.2.1",
    "defusedxml==0.7.1",
    "dotenv==0.9.9",
    "exceptiongroup==1.2.2",
    "executing==2.2.0",
    "fastapi==0.115.12",
    "fastjsonschema==2.21.1",
    "fqdn==1.5.1",
    "h11==0.14.0",
    "httpcore==1.0.7",
    "httptools==0.6.4",
    "httpx==0.28.1",
    "idna==3.10",
    "iniconfig==2.1.0",
    "ipykernel==6.29.5",
    "ipython==8.34.0",
    "isoduration==20.11.0",
    "jedi==0.19.2",
    "Jinja2==3.1.6",
    "json5==0.10.0",
    "jsonpatch==1.33",
    "jsonpointer==3.0.0",
    "jsonschema==4.23.0",
    "jsonschema-specifications==2024.10.1",
    "jupyter-events==0.12.0",
    "jupyter-lsp==2.2.5",
    "jupyter_client==8.6.3",
    "jupyter_core==5.7.2",
    "jupyter_server==2.15.0",
    "jupyter_server_terminals==0.5.3",
    "jupyterlab==4.3.6",
    "jupyterlab_pygments==0.3.0",
    "jupyterlab_server==2.27.3",
    "langchain==0.3.21",
    "langchain-core==0.3.48",
    "langchain-ollama==0.3.0",
    "langchain-text-splitters==0.3.7",
    "langgraph==0.3.20",
    "langgraph-checkpoint==2.0.23",
    "langgraph-prebuilt==0.1.6",
    "langgraph-sdk==0.1.59",
    "langsmith==0.3.18",
    "markdown-it-py==3.0.0",
    "MarkupSafe==3.0.2",
    "matplotlib-inline==0.1.7",
    "mdurl==0.1.2",
    "mistune==3.1.3",
    "mypy-extensions==1.0.0",
    "nbclient==0.10.2",
    "nbconvert==7.16.6",
    "nbformat==5.10.4",
    "nest-asyncio==1.6.0",
    "notebook_shim==0.2.4",
    "ollama==0.4.7",
    "orjson==3.10.16",
    "ormsgpack==1.9.0",
    "overrides==7.7.0",
    "packaging==24.2",
    "pandocfilters==1.5.1",
    "parso==0.8.4",
    "pathspec==0.12.1",
    "pexpect==4.9.0",
    "platformdirs==4.3.7",
    "pluggy==1.5.0",
    "prometheus_client==0.21.1",
    "prompt_toolkit==3.0.50",
    "psutil==7.0.0",
    "ptyprocess==0.7.0",
    "pure_eval==0.2.3",
    "pycparser==2.22",
    "pydantic==2.10.6",
    "pydantic_core==2.27.2",
    "Pygments==2.19.1",
    "pytest==8.3.5",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.0",
    "python-json-logger==3.3.0",
    "PyYAML==6.0.2",
    "pyzmq==26.3.0",
    "redis==5.2.1",
    "referencing==0.36.2",
    "requests==2.32.3",
    "requests-toolbelt==1.0.0",
    "rfc3339-validator==0.1.4",
    "rfc3986-validator==0.1.1",
    "rich==13.9.4",
    "rpds-py==0.23.1",
    "ruff==0.11.2",
    "Send2Trash==1.8.3",
    "six==1.17.0",
    "sniffio==1.3.1",
    "soupsieve==2.6",
    "SQLAlchemy==2.0.39",
    "stack-data==0.6.3",
    "starlette==0.46.1",
    "tenacity==9.0.0",
    "terminado==0.18.1",
    "tinycss2==1.4.0",
    "tomli==2.2.1",
    "tornado==6.4.2",
    "traitlets==5.14.3",
    "types-python-dateutil==2.9.0.20241206",
    "typing_extensions==4.12.2",
    "uri-template==1.3.0",
    "urllib3==2.3.0",
    "uvicorn==0.34.0",
    "uvloop==0.21.0",
    "watchfiles==1.0.5",
    "wcwidth==0.2.13",
    "webcolors==24.11.1",
    "webencodings==0.5.1",
    "websocket-client==1.8.0",
    "websockets==15.0.1",
    "xxhash==3.5.0",
    "zstandard==0.23.0"
]

[project.urls]
Homepage = "https://github.com/vedanta/rasa"
Documentation = "https://github.com/vedanta/rasa#readme"
Repository = "https://github.com/vedanta/rasa"

[tool.setuptools.packages.find]
where = ["."]
include = ["rasa*"]
exclude = ["tests*", "notebooks*"]